@@ -30,7 +30,20 @@ typedef enum
   SF_COLOR,
   SF_TOGGLE,
   SF_VALUE,
-  SF_STRING
+  SF_STRING,
+  SF_ADJUSTMENT
 } SFArgType;
 
+typedef enum
+{
+  SF_SLIDER = 0,
+  SF_SPINNER  
+} SFAdjustmentType;
+
 #endif /*  __SCRIPT_FU_ENUMS__  */
+
+
+
+
+
+
