@@ -1,3 +1,13 @@
+Thu Aug  6 16:55:45 MEST 1998 Sven Neumann <sven@gimp.org>:
+
+	* plug-ins/script-fu/script-fu-enums.h
+        * plug-ins/script-fu/script-fu.c
+        * plug-ins/script-fu/script-fu-scripts.c: New ScriptFu argument type
+        SF-ADJUSTMENT: You can have sliders and spin-buttons in the dialog.
+
+	* plug-ins/script-fu/scripts/test-sphere.scm: Simple script to show
+	and test the new interface.
+
 Wed Aug  5 16:29:05 PDT 1998 Manish Singh <yosh@gimp.org>
 
 	* initial merge of the internationalization stuff. It's still
